<resources>
    <string name="app_name">AwesomeChat</string>
    <string name="icon_splash">icon_splash</string>
    <string name="Awesome_chat">Awesomechat</string>
    <string name="experience">Trải nghiệm Awesome chat</string>
    <string name="icon_login">icon_login</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="email">EMAIL</string>
    <string name="password">MẬT KHẨU</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="noAccount">Chưa có tài khoản?</string>
    <string name="signupNow">Đăng ký ngay</string>
    <string name="signUp">Đăng ký</string>
    <string name="haveAccount">Đã có tài khoản</string>
    <string name="signinNow">Đăng nhập ngay</string>
    <string name="name">HỌ VÀ TÊN</string>
    <string name="bt_back">Nút quay trở lại</string>
    <string name="agree">Tôi đồng ý với các chính sách và điều khoản</string>
    <string name="error_user_null">Tên người dùng không được để trống</string>
    <string name="error_user_number">Tên người dùng không được chứa chữ số</string>
    <string name="error_password_isValid">Password không hợp lệ</string>
    <string name="error_email_isValid">Địa chỉ Email không hợp lệ</string>
    <string name="chat">Tin nhắn</string>
    <string name="personal_page">Trang cá nhân</string>
    <string name="friend">Bạn bè</string>
    <string name="image_personal">Image Personal</string>
    <string name="edit">button edit</string>
    <string name="select_language">select language</string>
    <string name="language">Ngôn ngữ</string>
    <string name="vietnamese">Tiếng việt</string>
    <string name="notification">Thông báo</string>
    <string name="image_notification">Image Notification</string>
    <string name="button_notification">Image notification</string>
    <string name="version">version</string>
    <string name="detail_version">Phiên bản ứng dụng</string>
    <string name="version_number">1.0.0</string>
    <string name="logout">Đăng xuất</string>
    <string name="edit_information">Chỉnh sửa thông tin</string>
    <string name="save">Lưu</string>
    <string name="number_phone">SỐ ĐIỆN THOẠI</string>
    <string name="birthday">NGÀY SINH</string>
    <string name="button_camera">camera</string>
    <string name="search_friend">Tìm kiếm bạn bè</string>
    <string name="add_friend">LỜI MỜI KẾT BẠN</string>
    <string name="add_friended">ĐÃ GỬI KẾT BẠN</string>
    <string name="agree_friend">Đồng ý</string>
    <string name="login_fail">Đăng nhập thất bại.Vui lòng thử lại</string>
    <string name="signup_fail">Đăng ký  thất bại. Vui lòng thử lại</string>
    <string name="edit_fail">Chỉnh sửa thông tin thất bại.Vui lòng thử lại</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="error_birthday_null">Birthday không được để trông</string>
    <string name="error_birthday">Kiểm tra lại ngày sinh nhật</string>
    <string name="error_numberphone_null">Số điện thoại không được để trống</string>
    <string name="error_numberphone">Số điện thoại không hợp le</string>
    <string name="request">Yêu cầu</string>
    <string name="message">Tin nhắn</string>
    <string name="icon_gallery">icon_gallery</string>
    <string name="input_message">Nhập tin nhắn</string>
    <string name="send_message">Send message</string>
    <string name="notification_badge">notification badge</string>
    <string name="create_message">Tạo tin nhắn</string>
    <string name="friend_list">DANH SÁCH BẠN BÈ</string>
    <string name="image_gallery">image gallery</string>
    <string name="sent">Gửi</string>
    <string name="all">Tất cả</string>
    <string name="input_email">Nhập email</string>
    <string name="type_image">Đã gửi hình ảnh cho bạn</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="input_name_user">Nhập tên người dùng</string>
    <string name="refuse">Từ chối</string>
    <string name="image_sent">image sent</string>
    <string name="Select_language">Lựa chọn ngôn ngữ</string>
    <string name="lg_vietnamese">Tiếng việt</string>
    <string name="lg_english">Tiếng anh</string>
    <string name="english">English</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Hủy</string>
    <string name="status_message">Hãy bắt đầu cuộc trò chuyện của bạn bằng một lời chào</string>
    <string name="signup1">ĐĂNG KÝ</string>
    <string name="please_wait">Please wait</string>
    <string name="signIn1">ĐĂNG NHẬP</string>
    <string name="yesterday">Hôm qua</string>
    <string name="image">Hình ảnh</string>
    <string name="notifi">Thông báo</string>
    <string name="question_confirm">Bạn có muốn đăng xuất ?</string>
    <string name="add">Kết bạn</string>
    <string name="request_gallery">Request permission gallery</string>
    <string name="default_notification_channel_id">Message Channel Id</string>
    <string name="notify_success">Sign up to receive notifications successfully</string>
    <string name="notify_failed">Registration failed</string>
    <string name="notify_invitation">Đã gửi yêu cầu kết bạn</string>

</resources>