<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.example.awesomechat.model.User" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_personal"
            android:layout_width="@dimen/size_image_friend"
            android:layout_height="@dimen/size_image_friend"
            imageUrlPerson="@{user.url}"
            android:contentDescription="@string/image_personal"
            android:layout_marginStart="@dimen/margin_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.name}"
            android:fontFamily="@font/lato_black"
            android:textSize="@dimen/text_size16sp"
            android:layout_marginTop="@dimen/margin_7dp"
            android:layout_marginStart="@dimen/margin_12dp"
            app:layout_constraintStart_toEndOf="@+id/img_personal"
            app:layout_constraintTop_toTopOf="@+id/img_personal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_Select"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button_agree"
            android:text="@string/agree_friend"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:background="@drawable/custom_button_confirm"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_delete"
            android:layout_width="@dimen/width_button_delete"
            android:layout_height="@dimen/height_button_delete"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@color/color_delete"
            android:text="@string/refuse"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_Select"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>